#rkb0q2 Wallet - Fix broken intent images

--- a/src/app/wallet/pages/intents/dposvote/dposvote.page.scss
+++ b/src/app/wallet/pages/intents/dposvote/dposvote.page.scss
@@ -21,7 +21,7 @@
         padding: 25px 15px 30px;
         overflow: visible;
 
-        img-loader {
+        img {
             width: 105px;
             height: 105px;
             position: absolute;
