--- a/src/app/wallet/pages/intents/esctransaction/esctransaction.page.scss
+++ b/src/app/wallet/pages/intents/esctransaction/esctransaction.page.scss
@@ -21,7 +21,7 @@
         padding: 25px 15px 30px;
         overflow: visible;
 
-        img-loader {
+        img {
             width: 116px;
             height: 95px;
             position: absolute;
