--- a/src/app/wallet/pages/intents/waitforsync/waitforsync.page.scss
+++ b/src/app/wallet/pages/intents/waitforsync/waitforsync.page.scss
@@ -21,7 +21,7 @@
         padding: 25px 15px 30px;
         overflow: visible;
 
-        img-loader {
+        img {
             width: 85px;
             height: 101px;
             position: absolute;
